fixed alignment and avatar display

--- a/src/app/audience/audience.component.css
+++ b/src/app/audience/audience.component.css
@@ -23,8 +23,6 @@ audience {
   margin-top: 5%;
 }
 
-
-
 .result-chart {
   margin-top: 0;
 }
@@ -45,7 +43,7 @@ p.averagetext {
   text-align: right;
   padding-right: 4px;
 
-} */
+} 
 
 .result-avg {
   display: flex;
@@ -58,6 +56,12 @@ p.averagetext {
   width: 80px;
   height: 80px;
   align-items: center;
+
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid pink;
+  align-content: center; */
 }
 
 .over-avg {
